tests/tooling/fixtures/native/execution/positive/message_send_nonzero_bound_identifier_invalidation_non_fast_path.objc3
module MessageSendNonzeroBoundIdentifierInvalidationNonFastPath;

fn main() -> i32 {
  let receiver = 7;
  receiver = receiver - 7;
  return [receiver ping];
}
