tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_message_selector_head_extern.objc3
module MisplacedQualifierMessageSelectorHeadExtern;

fn main() -> i32 {
  let receiver = 1;
  return [receiver extern];
}